// ERD — import at https://dbdiagram.io
// Khớp schema EF Core hiện tại (sau migration RemoveQuantityAddReturnTracking)

Table users {
  id int [pk, increment]
  email varchar(256) [unique, not null]
  password_hash varchar [not null]
  full_name varchar [not null]
  role int [not null, note: 'Admin=1 | Staff=2 | User=3']
  is_active bit [not null, default: true]
  created_at datetime [not null]
  is_deleted bit [not null, default: false]
  deleted_at datetime
}

Table refresh_tokens {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  token varchar [unique, not null]
  expires_at datetime [not null]
  revoked_at datetime
  created_at datetime [not null]
  is_deleted bit [not null, default: false]
  deleted_at datetime
}

Table equipment_categories {
  id int [pk, increment]
  name varchar(100) [unique, not null]
  description varchar
  created_at datetime [not null]
  is_deleted bit [not null, default: false]
  deleted_at datetime
}

Table equipments {
  id int [pk, increment]
  name varchar [not null]
  serial_number varchar [unique, not null]
  category_id int [not null, ref: > equipment_categories.id]
  status int [not null, note: 'Available=1 | Borrowed=2 | Maintenance=3 | Retired=4 | Reserved=5 | Damaged=6']
  location varchar
  description varchar
  image_url varchar(500)
  created_at datetime [not null]
  is_deleted bit [not null, default: false]
  deleted_at datetime
}

Table borrow_requests {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  request_date datetime [not null]
  borrow_date datetime [not null]
  expected_return_date datetime [not null]
  actual_return_date datetime [note: 'Set khi Completed']
  status int [not null, note: 'Pending=1 | Approved=2 | Rejected=3 | Cancelled=4 | InProgress=5 | Completed=6 | Overdue=7']
  purpose varchar(500) [not null]
  reject_reason varchar(500)
  approved_by_id int [ref: > users.id]
  approved_at datetime
  created_at datetime [not null]
  is_deleted bit [not null, default: false]
  deleted_at datetime
}

Table borrow_request_items {
  id int [pk, increment]
  borrow_request_id int [not null, ref: > borrow_requests.id]
  equipment_id int [not null, ref: > equipments.id]
  handover_note varchar(500) [note: 'Ghi chú staff khi bàn giao']
  return_note varchar(500) [note: 'Ghi chú staff khi trả từng thiết bị']
  return_status int [note: 'Snapshot EquipmentStatus lúc trả: Available|Damaged|Maintenance|Retired']
  created_at datetime [not null]
  is_deleted bit [not null, default: false]
  deleted_at datetime

  indexes {
    (borrow_request_id, equipment_id) [unique]
  }
}

Table return_records {
  id int [pk, increment]
  borrow_request_id int [unique, not null, ref: - borrow_requests.id]
  returned_at datetime [not null]
  returned_by_id int [not null, ref: > users.id]
  staff_note varchar [note: 'Ghi chú tổng của staff khi xác nhận trả']
  created_at datetime [not null]
  is_deleted bit [not null, default: false]
  deleted_at datetime
}

Table notifications {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  title varchar [not null]
  message varchar [not null]
  type int [not null, note: 'RequestApproved|RequestRejected|RequestOverdue|EquipmentReturned|General']
  is_read bit [not null, default: false]
  created_at datetime [not null]
  is_deleted bit [not null, default: false]
  deleted_at datetime
}
